# AutoDev

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.core.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/: json-output.json
examples/sample-project/plans/: 20260101_120000-plan.md
examples/sample-project/reviews/20260101_120000/: architecture-review.md  code-review.md  devops-review.md  security-review.md
harnesses/: claude-code.overlay  claude-code.yaml  generic.overlay  generic.yaml  hermes.overlay  hermes.yaml
references/: 2026-05-11-analysis-and-improvements.md  2026-05-11-conceptual-improvements.md  2026-05-11-refactoring.md  architecture-reviewer-prompt.md  code-reviewer-prompt.md  devops-reviewer-prompt.md  document-conversion-patterns.md  git-sync-checklist.md  hermes-delegate-task-integration.md  iteration-2-patterns.md  phase-2-closeout-ci-debug-2026-05-10.md  security-reviewer-prompt.md  session-2026-05-09-pitfalls.md  session-2026-05-10-fresnel-beacon-phase2.md  skill-walkthrough.md
scripts/: ci-check.sh  review-aggregator.py  run-pipeline.sh
skills/claude-code/: SKILL.md  install.sh
skills/claude-code/references/: json-output.md  troubleshooting.md
skills/hermes/: SKILL.md
skills/hermes/references/: dev-notes-schema.md  hermes-delegate-task-integration.md
src/: lib.rs
templates/: plan-template.md
templates/review-prompts/: architecture.md  code.md  devops.md  security.md
tests/: integration.rs
tools/: gen.py  gen.sh
