[package]
name = "auto-dev-pipeline"
version = "1.0.0"
edition = "2021"
authors = ["Hermes Agent"]
description = "Auto-Dev Pipeline: review → plan → execute → CI → repeat"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
chrono = "0.4"
walkdir = "2.5"
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.40", features = ["full"] }

[[bin]]
name = "run-pipeline"
path = "src/bin/run_pipeline.rs"

[[bin]]
name = "review-aggregator"
path = "src/bin/review_aggregator.rs"

[[bin]]
name = "ci-check"
path = "src/bin/ci_check.rs"
