[package]
name = "auto-dev-pipeline"
version = "0.6.0"
edition = "2021"
description = "Auto-Dev Pipeline: review → plan → execute → CI → repeat"
license = "MIT"
repository = "https://github.com/ni9aii/AutoDev"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
chrono = "0.4"
walkdir = "2.5"
colored = "3.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
url = "2.5"
dirs = "6.0"
once_cell = "1.20"
shlex = "2.0"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "auto_dev_pipeline"
path = "src/lib.rs"

[[bin]]
name = "run-pipeline"
path = "src/bin/run_pipeline/main.rs"

[[bin]]
name = "review-aggregator"
path = "src/bin/review_aggregator.rs"

[[bin]]
name = "ci-check"
path = "src/bin/ci_check.rs"
